1.11-persisting-data/manifests/deployment-log-out.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-out
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-out
  template:
    metadata:
      labels:
        app: log-out
    spec:
      volumes: # Define volume
        - name: shared-counter
          persistentVolumeClaim:
            claimName: my-example-pv-claim
      containers:
        - name: log-out
          image: salvahappydev/log-out:3.0.2
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /app/files
