1.11-persisting-data/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-out-svc
            port:
              number: 2344
